--- a/po/fr.po
+++ b/po/fr.po
@@ -1,66 +1,34 @@
-# French translations for nautilus-admin package.
-# Copyright (C) 2016 Bruno Nova
-# This file is distributed under the same license as the nautilus-admin package.
-# Loïc Escales <L0L022@openmailbox.org>, 2016.
+# Nautilus Admin POT file
+# Copyright (C) 2022 Nautilus Admin Team
+# This file is distributed under the GNU GPLv3 license.
+# Nautilus Admin Team, 2022.
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus-admin 0.2.0\n"
-"Report-Msgid-Bugs-To: https://github.com/brunonova/nautilus-admin/issues\n"
-"POT-Creation-Date: 2016-06-22 22:47+0100\n"
-"PO-Revision-Date: 2016-07-22 14:12+0200\n"
-"Last-Translator: Loïc Escales <L0L022@openmailbox.org>\n"
-"Language-Team: \n"
-"Language: fr\n"
+"Project-Id-Version: 1.1.19\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2022-10-25 15:21+0200\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: fr <fr@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.8\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: extension/nautilus-admin.py:122
-msgid "CAUTION!"
-msgstr "ATTENTION !"
+#: extension/nautilus-admin.py:88 extension/nautilus-admin.py:156
+msgid "Open as Admin"
+msgstr "Ouvrir en tant qu'administrateur"
 
-#: extension/nautilus-admin.py:104
-msgid "Edit as A_dministrator"
-msgstr "Éditer en tant qu'A_dministrateur"
-
-#: extension/nautilus-admin.py:88
-msgid "Open as A_dministrator"
-msgstr "Ouvrir en tant qu'A_dministrateur"
-
-#: extension/nautilus-admin.py:105
-msgid "Open this file in the text editor with root privileges"
-msgstr "Ouvrir ce fichier dans l'éditeur de texte avec les privilèges administrateurs"
-
-#: extension/nautilus-admin.py:89
+#: extension/nautilus-admin.py:89 extension/nautilus-admin.py:157
 msgid "Open this folder with root privileges"
-msgstr "Ouvrir ce dossier avec les privilèges administrateurs"
+msgstr "Ouvrir ce dossier avec les privilèges root"
 
-#: extension/nautilus-admin.py:96
-msgid "Run as A_dministrator"
-msgstr "Lancer en tant qu'A_dministrateur"
+#: extension/nautilus-admin.py:95 extension/nautilus-admin.py:163
+msgid "Edit as Admin"
+msgstr "Editer en tant qu'administrateur"
 
-#: extension/nautilus-admin.py:97
-msgid "Run this file with root privileges"
-msgstr "Lancer ce fichier avec les privilèges administrateurs"
-
-#: extension/nautilus-admin.py:123
-msgid ""
-"Running the File Manager, the Text Editor or an executable with Administrator "
-"privileges <b>is dangerous</b>! <b>You can easily destroy your system if you are not "
-"careful!</b>\n"
-"<b>Think twice</b> before doing so, especially before running untrusted executables "
-"downloaded from the Internet. <b>They can contain malware</b>, which can do "
-"<b>irreversible damage to your system</b> when given Administrator privileges!\n"
-"Proceed only if you know what you are doing and understand the risks."
-msgstr ""
-"Lancer le gestionnaire de fichiers, l'éditeur de texte ou un programme avec les droits "
-"administrateurs est <b>dangereux</b> ! <b>Vous pouvez facilement détruire votre "
-"système si vous n'êtes pas prudent</b> !\n"
-"Penser à deux fois avant de le faire, particulièrement avant de lancer des programmes "
-"inconnus téléchargés sur internet. <b>Ils peuvent contenir des virus</b>, qui peuvent "
-"causer des <b>dommages irréversibles à votre système</b> avec les droits "
-"administrateurs !\n"
-"Continuez seulement si vous savez ce que vous faites et en comprenez les risques."
+#: extension/nautilus-admin.py:96 extension/nautilus-admin.py:164
+msgid "Edit this file with root privileges"
+msgstr "Editer ce fichier avec les privilèges root"
