--- a/po/nautilus-admin.pot
+++ b/po/nautilus-admin.pot
@@ -1,14 +1,14 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Bruno Nova
-# This file is distributed under the same license as the nautilus-admin package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Nautilus Admin POT file
+# Copyright (C) 2022 Nautilus Admin Team
+# This file is distributed under the GNU GPLv3 license.
+# Nautilus Admin Team, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus-admin 1.1.0\n"
-"Report-Msgid-Bugs-To: https://github.com/brunonova/nautilus-admin/issues\n"
-"POT-Creation-Date: 2017-09-11 20:53+0100\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2022-10-25 15:21+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,18 +17,18 @@ msgstr ""
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: extension/nautilus-admin.py:92
-msgid "Edit as A_dministrator"
+#: extension/nautilus-admin.py:88 extension/nautilus-admin.py:156
+msgid "Open as Admin"
 msgstr ""
 
-#: extension/nautilus-admin.py:84
-msgid "Open as A_dministrator"
-msgstr ""
-
-#: extension/nautilus-admin.py:93
-msgid "Open this file in the text editor with root privileges"
-msgstr ""
-
-#: extension/nautilus-admin.py:85
+#: extension/nautilus-admin.py:89 extension/nautilus-admin.py:157
 msgid "Open this folder with root privileges"
+msgstr ""
+
+#: extension/nautilus-admin.py:95 extension/nautilus-admin.py:163
+msgid "Edit as Admin"
+msgstr ""
+
+#: extension/nautilus-admin.py:96 extension/nautilus-admin.py:164
+msgid "Edit this file with root privileges"
 msgstr ""
